Use "es5" trailing comma setting, so we can still write node scripts

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,7 @@
   },
   "rules": {
     "prettier/prettier": ["error", {
-      "trailingComma": "all",
+      "trailingComma": "es5",
       "singleQuote": true
     }],
 
